# opencl-wave-simulation

./: .gitignore  CMakeLists.txt
cmake/: FindOPENCL.cmake  helper.cmake
src/: CallbackHandler.h  Chronometer.hpp  CpuWaves.cpp  CpuWaves.h  ExampleApp.cpp  ExampleApp.h  GLSLProgram.cpp  GLSLProgram.h  GlutApp.cpp  GlutApp.h  GpuWaves.cpp  GpuWaves.h  GridGenerator.cpp  GridGenerator.h  MathUtils.cpp  MathUtils.h  OpenCLWaveSimulation.cpp  OpenCLWaveSimulation.h  OpenGLOnlyApp.cpp  OpenGLOnlyApp.h  WaveApp.cpp  WaveApp.h  WaveSim.cpp  WaveSim.h  WaveSimulation.cl  cpu_wave_sim.cpp  fxWaves.cl  gltest.cpp  gpu_waves.cpp  gpuwaves.cpp  main.cpp  ogl_warm_up.cpp  sinewave.cl
src/fx/: render_waves.frag  render_waves.vert  simple.frag  simple.vert  test.frag  test.vert  waves.vert
src/kernel/: WaveSimulation.cl  fxWaves.cl
src/shader/: simple.vert  test.vert  waves.frag
